--- a/styleproject.css
+++ b/styleproject.css
@@ -439,8 +439,9 @@ i {
     /*style for screen body*/
 
     body .main-content {
-        height: 700px;
-        margin: 10px 0 0 10px;
+        width: 364px;
+        height: 400px;
+        margin: 0 0 0 5px;
         background-color: rgba(153, 194, 223, 0.783);
         box-shadow: 0px 10px 18px 1px rgba(0, 0, 0, 0.227);
         display: flex;
@@ -449,44 +450,100 @@ i {
     }
 
     body .main-content h1 {
-        font-size: 90px;
+        font-size: 30px;
     }
 
     body .main-content h2 {
-        font-size: 50px;
+        font-size: 15px;
+        padding: 0;
+        margin: 0;
+    }
+
+    body .main-content h4 {
         margin: 0;
     }
 
     body .main-content h4 a {
-        font-size: 30px;
-        margin: 0;
+        font-size: 10px;
+        padding: 0;
     }
 
-
     body .main-content .blocktext {
-        font-size: 30px;
+        font-size: 15px;
         text-align: center;
         margin-left: 5px;
         margin-right: 5px;
-
     }
 
     body .wrapper {
         margin-top: 5px;
+        padding: 0;
     }
 
     body .btn {
         border-radius: 5px;
-        padding: 10px 26px;
-        font-size: 1.5em;
-        margin-left: 5px;
+        padding: 10px 16px;
+        font-size: 1em;
     }
 
     /*style for offers*/
     body .main-flexbox {
+        flex-direction: column;
+        margin: 10px 0 0 5px;
+    }
+
+    body .offers-grid {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        margin-left: 100px;
-
+        /*align-content: center;*/
+        width: 364px;
+        height: 400px;
+        border-radius: 0%;
     }
+
+    .off-summ-grid,
+    .off-wint-grid {
+        width: 340px;
+        margin: 0 0 0 10px;
+    }
+
+    .off-summ-grid h1 {
+        font-size: 20px;
+    }
+
+    .off-summ-grid p {
+        font-size: 15px;
+    }
+
+    .off-summ-grid h3 {
+        font-size: 15px;
+    }
+
+    .off-wint-grid h1 {
+        font-size: 20px;
+    }
+
+    .off-wint-grid p {
+        font-size: 15px;
+    }
+
+    .off-wint-grid h3 {
+        font-size: 15px;
+    }
+
+    .next {
+        width: 364px;
+        margin: 0;
+        grid-template-columns: repeat(3, 0.5fr);
+        grid-template-rows: repeat(3, 0.5fr);
+        justify-items: center;
+    }
+
+    .social-media {
+        width: 364px;
+        margin: 0;
+        font-size: 1em;
+        /* grid-area: 1 / 5;
+        grid-template-columns: repeat(7, 40px);*/
+    }
+}
