--- a/styleproject.css
+++ b/styleproject.css
@@ -138,7 +138,7 @@ html {
 
 .main-content p {
     font-family: 'Oswald', sans-serif;
-    color: #05445E;
+    color: black;
     font-size: 20px;
     text-indent: 25px;
 
